--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,12 @@
+body {
+  color: #555555;
+  margin: 0;
+  font-family: "Poppins";
+}
 header {
-  color: Peru;
   background-color: #d9e4dd;
   border-bottom: 1px solid #e7e7e7;
   padding: 10px;
-  font-family: "Poppins";
   display: flex;
 }
 
@@ -11,13 +14,30 @@ main {
   background-color: #fbf7f0;
 }
 
+img {
+  height: 200px;
+  width: 300px;
+}
+
+header li {
+  list-style: none;
+}
+header a {
+  font-size: 18px;
+  text-decoration: none;
+  text-align: center;
+  color: darkgray;
+}
+section {
+  margin: auto 25%;
+  display: flex;
+  flex-direction: column;
+}
+
 footer {
   background-color: #d9e4dd;
-  margin-top: auto;
-  font-family: "Poppins";
   text-align: center;
   flex-direction: column;
-
   bottom: 0;
   left: 0;
   width: 100%;
