--- a/css/style.css
+++ b/css/style.css
@@ -2,29 +2,27 @@ body {
   color: #555555;
   margin: 0;
   font-family: "Poppins";
+  background-color: #fbf7f0;
 }
 header {
   background-color: #d9e4dd;
   border-bottom: 1px solid #e7e7e7;
   padding: 10px;
   display: flex;
+  justify-content: space-evenly;
 }
 
-main {
-  background-color: #fbf7f0;
+h1 {
+  font-family: "Sacramento", cursive;
+  font-size: 50px;
 }
 
 img {
-  height: 200px;
-  width: 300px;
-}
-
-#person {
   height: 150px;
-  width: 200px;
+  width: 250px;
 }
 
-header li {
+li {
   list-style: none;
 }
 header a {
@@ -34,22 +32,31 @@ header a {
   color: darkgray;
 }
 section {
-  margin: auto 25%;
   display: flex;
   flex-direction: column;
+  margin: 0 25%;
 }
 
-footer {
-  background-color: #d9e4dd;
-  text-align: center;
-  flex-direction: column;
-  bottom: 0;
-  left: 0;
-  width: 100%;
+.table {
+  border: 2px solid;
+  margin: 30px 25%;
+}
+
+td {
+  border: 2px solid;
 }
 
 .form {
   padding: 15px;
   border-radius: 2px;
   text-align: center;
+}
+.character {
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  margin: 100px;
+}
+.news {
+  border: 2px solid;
 }
